--- a/ultimate_challenge/Ultimate Challenge - Part 1 & 2.ipynb
+++ b/ultimate_challenge/Ultimate Challenge - Part 1 & 2.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1081,6 +1088,32 @@
    ],
    "source": [
     "forecast # Displaying various results in table format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) I would track something like revenue, grouped by toll refunds per driver per day. Given a certain distance and average time it takes to travel between the two cities, there is probably a reasonable target that could be set for a plausible experiment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) \n",
+    "    a) There would be 4 groups: Gotham A & B, and Metropolis A & B. A groups would be controls, ie they don't get a refund. B Groups would be the treatment groups, so the groups that do get the refunds. The members of these groups would be randomly chosen, making this a randomly controlled study.\n",
+    "\n",
+    "    b) Because there is a choice for the groups, chi square tests make the most sense for determining significance of the results.\n",
+    "\n",
+    "    c) The chi square test would tell us that the result is either directly due to the treatment (the refunds) or if it had no effect at all. Assuming the refunds do affect the results, it makes sense to continue with the experiment as a policy, or perhaps find a way to incentivize drivers (get so many tolls per week and they are refunded at the end of the month, etc.)"
    ]
   }
  ],
